k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-red-service
spec:
  type: NodePort
  selector:
    app: node-red
  ports:
    - port: 1880
      targetPort: 1880
      nodePort: 30080
